Update tmux config

--- a/src/tmux/.tmux.conf
+++ b/src/tmux/.tmux.conf
@@ -1,3 +1,6 @@
+# ------------------------------------------------------------------------------
+# ~/.tmux.conf
+
 TMUX_FG_COLOUR=colour22
 TMUX_BG_COLOUR=colour238
 
