Update tmux config

--- a/src/tmux/.tmux.conf
+++ b/src/tmux/.tmux.conf
@@ -1,17 +1,36 @@
 # ------------------------------------------------------------------------------
 # ~/.tmux.conf
 
-TMUX_FG_COLOUR=colour22
-TMUX_BG_COLOUR=colour238
+#FG_COLOUR=colour22
+#BG_COLOUR=colour238
+
+# ------------------------------------------------------------------------------
+# ~/.profile:
+#   export TMUX_FG_COLOUR=#780134
+#   export TMUX_BG_COLOUR=#888888
+
+%if #{==:#{TMUX_FG_COLOUR},}
+FG_COLOUR=color22
+%else
+FG_COLOUR="$TMUX_FG_COLOUR"
+%endif
+
+%if #{==:#{TMUX_BG_COLOUR},}
+BG_COLOUR=color238
+%else
+BG_COLOUR="$TMUX_BG_COLOUR"
+%endif
+
+# ------------------------------------------------------------------------------
 
 set -g base-index 1
 set -g pane-base-index 1
 set -g renumber-windows on
 set -g mouse on
 
-set -g status-style fg=white,bg=$TMUX_FG_COLOUR
-set -g pane-border-style fg=$TMUX_BG_COLOUR
-set -g pane-active-border-style fg=$TMUX_FG_COLOUR
+set -g status-style fg=white,bg=$FG_COLOUR
+set -g pane-border-style fg=$BG_COLOUR
+set -g pane-active-border-style fg=$FG_COLOUR
 
 set -g status-right-length 100
 set -g status-right " #H %F %H:%M "
