--- a/src/clog/.clogrc
+++ b/src/clog/.clogrc
@@ -1,20 +1,37 @@
-default rule /fcron\[/          --> color246 line
-default rule /sshd\[/           --> color222 line
-default rule /xbps-install/     --> color190 line
-default rule /sudo:/            --> color206 line
+metalog rule /( \w+\.\w+:|\[\w+\])/ --> color252 match
 
-default rule /\b[0-9]{1,3}.(\.[0-9]{1,3}){3}\b/     --> color255 match
-#default rule /\b[0-9]{3,}\b/                        --> color255 match
-default rule /\b[0-9]+\b/                           --> color255 match
-default rule /\b[0-9a-f]{2,}+\b/                    --> color255 match
+metalog rule /\[(fcron|chronyd)/    --> color246 line
+metalog rule /\[sshd/               --> color223 line
+metalog rule /\[xbps-.*/            --> color190 line
+metalog rule /\[su(do)?\]/          --> color226 line
+#metalog rule /\[dhcp/              --> color29 line
+metalog rule /\[dhcp/               --> color30 line
+metalog rule /\[kernel/             --> color33 line
 
-default rule /warn|debug|not allowed|[Ss]topping/   --> color214 match
-default rule /aborted|error|failed/     --> color196 match
-#default rule /session opened/   --> color222 match
-#default rule /session closed/   --> color82  match
-default rule /\broot\b/         --> color196 match
+# Numbers
+metalog rule /\b[0-9]+\b/           --> color255 match
+metalog rule /\b[0-9a-f]{2,}+\b/    --> color255 match
 
-default rule /^[0-9-]+/         --> color245 match
-default rule /T[0-9:.]+/        --> color255 match
-default rule / \w+\.\w+:/       --> color33 match
+# IP
+metalog rule /[0-9]{1,3}(\.[0-9]{1,3}){3}/  --> color123 match
+
+# Interfaces
+metalog rule /\b(eth|wlan)[0-9]+\b/         --> color123 match
+metalog rule /\b(en|wl|ww)([os][0-9]+|p[0-9]+s[0-9]+|x[0-9a-f]+)\b/ --> color123 match
+
+metalog rule /warn|debug|not allowed/                   --> color214 match
+metalog rule /([Ee]xit|[Ss]topp|[Tt]erminat)(ed|ing)/   --> color214 match
+metalog rule /aborted|error|failed/                     --> color196 match
+metalog rule /(start|complet)(ed|ing)/                  --> color34 match
+
+metalog rule /\broot\b/         --> color196 match
+
+# Path
+metalog rule /\/(etc|usr|var)(\/[[:alnum:]\._-]+)+/  --> color255 match
+
+# Date
+metalog rule /^[0-9]{4}(-[0-9]{2}){2}/          --> color31 match
+
+# Time
+metalog rule /[0-9]{2}(:[0-9]{2}){2}\.[0-9]{3}/ --> color250 match
 
