--- a/src/tmux/.tmux.conf
+++ b/src/tmux/.tmux.conf
@@ -32,6 +32,8 @@ set -g status-style fg=white,bg=$FG_COLOUR
 set -g pane-border-style fg=$BG_COLOUR
 set -g pane-active-border-style fg=$FG_COLOUR
 
+set -g clock-mode-colour $FG_COLOUR
+
 set -g status-right-length 100
 set -g status-right " #H %F %H:%M "
 
