--- a/src/clog/.clogrc
+++ b/src/clog/.clogrc
@@ -1,38 +1,84 @@
-metalog rule /( \w+\.\w+:|\[\w+\])/ --> color252 match
+# ------------------------------------------------------------------------------
+# default
 
-metalog rule /\[(fcron|chronyd)/    --> color246 line
-metalog rule /\[smartd/             --> color246 line
-metalog rule /\[sshd/               --> color223 line
-metalog rule /\[xbps-.*/            --> color190 line
-metalog rule /\[su(do)?\]/          --> color226 line
-#metalog rule /\[dhcp/              --> color29 line
-metalog rule /\[dhcp/               --> color30 line
-metalog rule /\[kernel/             --> color33 line
+default rule /( \w+\.\w+:|\[\w+\])/             --> color252 match
 
 # Numbers
-metalog rule /\b[0-9]+\b/           --> color255 match
-metalog rule /\b[0-9a-f]{2,}+\b/    --> color255 match
+default rule /\b[0-9]+\b/                       --> color255 match
 
 # IP
-metalog rule /[0-9]{1,3}(\.[0-9]{1,3}){3}/  --> color123 match
+default rule /[0-9]{1,3}(\.[0-9]{1,3}){3}/      --> color123 match
+
+# Errors
+default rule /aborted|error|failed|denied/      --> color196 match
+
+# Date
+default rule /^[0-9]{4}(-[0-9]{2}){2}/          --> color31 match
+
+# Time
+default rule /[0-9]{2}(:[0-9]{2}){2}\.[0-9]{3}/ --> color252 match
+
+# ------------------------------------------------------------------------------
+# metalog
+
+metalog rule /( \w+\.\w+:|\[\w+\])/     --> color252 match
+
+# services
+metalog rule /\[(fcron|chronyd)/        --> color246 line
+metalog rule /\[smartd/         --> color248 line
+metalog rule /\[sshd/           --> color223 line
+metalog rule /\[xbps-.*/        --> color190 line
+metalog rule /\[su(do)?\]/      --> color226 line
+metalog rule /\[dhcp/           --> color30 line
+metalog rule /\[kernel/         --> color33 line
+
+# Numbers
+metalog rule /\b[0-9]+\b/       --> color255 match
+metalog rule /\b[0-9a-f]{2,}+\b/        --> color255 match
+
+# IP
+metalog rule /[0-9]{1,3}(\.[0-9]{1,3}){3}/      --> color123 match
 
 # Interfaces
-metalog rule /\b(eth|wlan)[0-9]+\b/         --> color123 match
+metalog rule /\b(eth|wlan)[0-9]+\b/             --> color123 match
 metalog rule /\b(en|wl|ww)([os][0-9]+|p[0-9]+s[0-9]+|x[0-9a-f]+)\b/ --> color123 match
 
-metalog rule /warn|debug|not allowed/                   --> color214 match
+# Errors
+metalog rule /warn|debug|not (allowed|found)|unreadable/        --> color214 match
 metalog rule /([Ee]xit|[Ss]topp|[Tt]erminat)(ed|ing)/   --> color214 match
 metalog rule /aborted|error|failed/                     --> color196 match
-metalog rule /(start|complet)(ed|ing)/                  --> color34 match
+
+metalog rule /(start|complet|succeed)(ed|ing)/          --> color34 match
 
 metalog rule /\broot\b/         --> color196 match
 
 # Path
-metalog rule /\/(etc|usr|var)(\/[[:alnum:]\._-]+)+/  --> color255 match
+metalog rule /\/(etc|usr|var)(\/[[:alnum:]\._-]+)+/     --> color255 match
 
 # Date
 metalog rule /^[0-9]{4}(-[0-9]{2}){2}/          --> color31 match
 
 # Time
-metalog rule /[0-9]{2}(:[0-9]{2}){2}\.[0-9]{3}/ --> color250 match
+metalog rule /[0-9]{2}(:[0-9]{2}){2}\.[0-9]{3}/ --> color252 match
+
+# ------------------------------------------------------------------------------
+# named
+
+# Numbers
+named rule /\b[0-9]+\b/                         --> color255 match
+
+# IP
+named rule /[0-9]{1,3}(\.[0-9]{1,3}){3}/        --> color123 match
+
+# Queries
+named rule /\b(A|AAAA|MX|TXT|SOA|SRV|CAA)\b/    --> color223 match
+
+# Errors
+named rule /aborted|error|failed|denied/        --> color196 match
+
+# Date
+named rule /^[0-9]{2}-[A-Za-z]{3}-[0-9]{4}/     --> color31 match
+
+# Time
+named rule /[0-9]{2}(:[0-9]{2}){2}\.[0-9]{3}/   --> color252 match
 
