--- a/src/clog/.clogrc
+++ b/src/clog/.clogrc
@@ -71,7 +71,11 @@ named rule /\b[0-9]+\b/                         --> color255 match
 named rule /[0-9]{1,3}(\.[0-9]{1,3}){3}/        --> color123 match
 
 # Queries
-named rule /\b(A|AAAA|MX|TXT|SOA|SRV|CAA)\b/    --> color223 match
+named rule / query: (\w+\.)+\w+ /               --> color255 match
+named rule / ([a-z0-9_-]+\.)+\.pl /             --> color34 match
+
+# Types
+named rule / (A{1,4}|CAA|DNSKEY|MX|NS|S(OA|PF|RV)|TXT) /     --> color223 match
 
 # Errors
 named rule /aborted|error|failed|denied/        --> color196 match
