--- a/src/nftables/etc/nftables.conf
+++ b/src/nftables/etc/nftables.conf
@@ -3,59 +3,47 @@
 flush ruleset
 
 table inet filter {
-    chain inbound {
-        # By default, drop all traffic unless it meets a filter
-        # criteria specified by the rules that follow below
+        
+    chain input {
         type filter hook input priority 0; policy drop;
 
-        # Accept any localhost traffic
-        iif lo accept
+        iif lo accept 
+            comment "accept any localhost traffic"
 
-        # Allow traffic from established and related packets.
-        #ct state established,related accept comment "Accept traffic originated from us"
         ct state established,related accept
-
-        # Allow all ICMP and IGMP traffic, but enforce a rate limit
-        # to help prevent some types of flood attacks.
-        #ip protocol icmp limit rate 5/second accept
-        icmp type echo-request limit rate 5/second accept
-        ip6 nexthdr ipv6-icmp limit rate 5/second accept
-
-        ip protocol igmp limit rate 5/second accept
-
-        # Accept neighbour discovery otherwise IPv6 connectivity breaks
-        icmpv6 type { nd-neighbor-solicit, nd-router-advert, nd-neighbor-advert } accept
         
-        # mDNS
-        udp dport mdns ip daddr 224.0.0.251 accept
+        ct state invalid drop 
+            comment "drop invalid connections";
 
-        # SSH
+        icmpv6 type { nd-neighbor-solicit, nd-router-advert, 
+            nd-neighbor-advert } accept
+            comment "accept neighbour discovery otherwise IPv6 connectivity breaks"
+
+        udp sport 5678 udp dport 5678 ip daddr 255.255.255.255 accept 
+            comment "Mikrotik Neighbor Discovery Protocol"
+
+        #udp dport mdns ip daddr 224.0.0.251 accept
+
         tcp dport 22 accept
 
-        # HTTP, HTTPS
         #tcp dport { 80, 443 } accept
 
-        # Mikrotik Neighbor Discovery Protocol
-        #udp sport 5678 udp dport 5678 ip daddr 255.255.255.255 accept
-
-        # --------------------------------------------------------------------------
-        # Drop before log
+        # drop before log
 
         # DHCP
         #udp sport 68 udp dport 67 drop
-        #udp sport 67 udp dport 68 ip daddr 255.255.255.255 drop
+        udp sport 68 udp dport 67 ip daddr 255.255.255.255 drop
 
         # SMB, SMB2, CIFS, NetBIOS, WINS
-        #udp dport { 137, 138 } drop
-        #tcp dport { 139, 445 } drop
+        udp dport { 137, 138 } drop
+        tcp dport { 139, 445 } drop
 
         # High ports
-        #tcp dport 1024-65535 drop
-        #udp dport 1024-65535 drop
+        tcp dport 1024-65535 drop
+        udp dport 1024-65535 drop
 
-        # --------------------------------------------------------------------------
-        # Logging of denied inbound traffic
-        log prefix "[nftables] Inbound Denied: " counter drop
+        log prefix "[nft:filter:input] drop: " counter drop 
+            comment "logging of denied input"
     }
 }
 
